fabric/testdata/out/ing_setanta-categories-staging-get-metrics-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(3) \u0026\u0026
      Path(\"/metrics\") \u0026\u0026 Method(\"GET\") \u0026\u0026 Header(\"X-Forwarded-Proto\",
      \"https\")"},"labels":{"controller-uid":"945a1e7f-8660-420e-b369-1d8ead57aa21","deployment-id":"d-h26p2nh5mx6m64fwthngr496b","pipeline-id":"l-2fh11iwr97crmf1ps8xchjjbwk"},"name":"setanta-categories-staging-get-metrics-all","namespace":"default"},"spec":{"rules":[{"host":"setanta-categories-staging.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"setanta-categories-staging","servicePort":"http"},"pathType":"ImplementationSpecific"}]}},{"host":"spp-categories [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid")
      -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward", "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(3) && Path("/metrics") && Method("GET")
      && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-12-16T16:19:22Z"
  generation: 1
  labels:
    controller-uid: 945a1e7f-8660-420e-b369-1d8ead57aa21
    deployment-id: d-h26p2nh5mx6m64fwthngr496b
    pipeline-id: l-2fh11iwr97crmf1ps8xchjjbwk
  name: setanta-categories-staging-get-metrics-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: setanta-categories-staging
    uid: 945a1e7f-8660-420e-b369-1d8ead57aa21
  resourceVersion: "1380519986"
  uid: 56c8fa68-3817-4169-950d-24832a7efb8a
spec:
  rules:
  - host: setanta-categories-staging.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-categories-staging
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-categories-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: setanta-categories-staging
            port:
              name: http
        pathType: ImplementationSpecific
  - host: categories.setanta-staging.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-categories-staging
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
